More css clean up:  - Update tabbrowser-tabs selectors  - Update TabsToolbar selectors  - Fix new-tab-button visibility on right side  - Update TabsToolbar buttons style

--- a/addon/chrome/content/overlay/browser.css
+++ b/addon/chrome/content/overlay/browser.css
@@ -130,7 +130,7 @@
 
 
 /* we use this rule in tabmix.js Tabmix.getAfterTabsButtonsWidth */
-#TabsToolbar > #tabbrowser-tabs > #tabbrowser-arrowscrollbox > #tabs-newtab-button[force-display] {
+#tabbrowser-arrowscrollbox > #tabs-newtab-button[force-display] {
   display: -moz-box !important;
 }
 
@@ -151,7 +151,13 @@
   visibility: visible;
 }
 
-#TabsToolbar[tabmix-show-newtabbutton*="side"]  #new-tab-button {
+/* override firefox rule from browser.css */
+#tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow="true"]) ~ #new-tab-button {
+  display: -moz-box;
+}
+
+#TabsToolbar[tabmix-show-newtabbutton*="side"] #tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow="true"]) ~ #new-tab-button,
+#TabsToolbar[tabmix-show-newtabbutton*="side"] #new-tab-button {
   visibility: visible;
 }
 
@@ -284,10 +290,10 @@ so display: none !important; does not hide the button */
 }
 
 /* we add #TabsToolbar to get higher specificity, in order to override Firefox rule */
-#TabsToolbar > #tabbrowser-tabs:not([overflow="true"], [hashiddentabs], [showalltabsbutton]) ~ #alltabs-button {
+#TabsToolbar #tabbrowser-tabs:not([overflow="true"], [hashiddentabs], [showalltabsbutton]) ~ #alltabs-button {
   display: none;
 }
-#TabsToolbar > #tabbrowser-tabs:not([overflow="true"], [showalltabsbutton])[using-closing-tabs-spacer] ~ #alltabs-button {
+#TabsToolbar #tabbrowser-tabs:not([overflow="true"], [showalltabsbutton])[using-closing-tabs-spacer] ~ #alltabs-button {
   /* temporary space to keep a tab's close button under the cursor */
   display: -moz-box;
   visibility: hidden;
