--- a/addon/chrome/skin/app_version/78/linux/browser.css
+++ b/addon/chrome/skin/app_version/78/linux/browser.css
@@ -10,9 +10,9 @@
 @import url("chrome://tabmixplus/skin/app_version/78/tabStyles.css");
 
 /***  Tab close button when user set background color ***/
-#TabsToolbar[brighttext] > #tabbrowser-tabs[tabmix_unloadedStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"])[tabmix_tabState="unloaded"]:not(:hover) .tab-close-button,
-#TabsToolbar[brighttext] > #tabbrowser-tabs[tabmix_unreadStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"])[tabmix_tabState="unread"]:not(:hover) .tab-close-button,
-#TabsToolbar[brighttext] > #tabbrowser-tabs[tabmix_otherStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"]):not([tabmix_tabState]):not(:hover) > .tab-close-button {
+#TabsToolbar[brighttext] #tabbrowser-tabs[tabmix_unloadedStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"])[tabmix_tabState="unloaded"]:not(:hover) .tab-close-button,
+#TabsToolbar[brighttext] #tabbrowser-tabs[tabmix_unreadStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"])[tabmix_tabState="unread"]:not(:hover) .tab-close-button,
+#TabsToolbar[brighttext] #tabbrowser-tabs[tabmix_otherStyle~="bg"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([visuallyselected="true"]):not([tabmix_tabState]):not(:hover) > .tab-close-button {
   /*noinspection CssInvalidFunction*/
   background-image: -moz-image-rect(url("chrome://global/skin/icons/close.svg"), 0, 16, 16, 0);
 }
