--- a/addon/chrome/skin/app_version/all/linux/browser.css
+++ b/addon/chrome/skin/app_version/all/linux/browser.css
@@ -10,28 +10,18 @@
   background-image: none !important;
 }
 
-#TabsToolbar > .tabs-closebutton:not([class~="tabmix"]) {
-  list-style-image: url("moz-icon://stock/gtk-close?size=menu");
-}
-
 /***  Tabstrip close button Firefox 31+ ***/
-.tabs-closebutton.tabmix:not(:hover) {
-  /*noinspection CssInvalidFunction*/
+#tabmix-tabs-closebutton:not(:hover) {
   background-image: -moz-image-rect(url("chrome://global/skin/icons/close.svg"), 0, 64, 16, 48);
 }
 
-.tabs-closebutton.tabmix:not(:hover):-moz-lwtheme-brighttext {
-  /*noinspection CssInvalidFunction*/
+#tabmix-tabs-closebutton:not(:hover):-moz-lwtheme-brighttext {
   background-image: -moz-image-rect(url("chrome://global/skin/icons/close.svg"), 0, 80, 16, 64);
 }
 
-.tabs-closebutton.tabmix:not(:hover):-moz-lwtheme-darktext {
+#tabmix-tabs-closebutton:not(:hover):-moz-lwtheme-darktext {
   /*noinspection CssInvalidFunction*/
   background-image: -moz-image-rect(url("chrome://global/skin/icons/close.svg"), 0, 96, 16, 80);
-}
-
-#TabsToolbar[tabmix_skin][multibar] > #appmenu-toolbar-button {
-  height: 25px;
 }
 
 /* set on linux we need to set vertical align even if the button is hidden*/
